--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 torch~=2.0.1+cu117
 tqdm~=4.64.1
 pathlib2~=2.3.7.post1
-argparse~=1.4.0
 torchvision~=0.15.2+cu117
+lightning~=2.1.1
+argparse~=1.4.0
+timm~=0.9.10
+setuptools~=65.6.3
 numpy~=1.23.5
+omegaconf~=2.0.6
