--- a/config/default.yaml
+++ b/config/default.yaml
@@ -7,7 +7,7 @@ fit:
       used: True
       params:
         dirpath: "./checkpoint/"  # 模型保存的文件夹位置
-        filename: "checkpoint-{epoch}-{val_loss:.4f}"  # 模型保存的名称
+        filename: "checkpoint-{epoch}-{val_acc1:.4f}"  # 模型保存的名称
         monitor: "val_acc1" # 监控的指标
         mode: "max" # 监控指标的模式
         verbose: False
@@ -51,7 +51,7 @@ fit:
     strategy: "auto"
     gradient_clip_val: 1.0 # 梯度裁剪的阈值
     precision: "32" # 训练精度，64、32、16、bf16
-    enable_checkpointing: True # 如果没有使用ModelCheckpoint回调函数，是否启用一个默认的ModelCheckpoint
+    enable_checkpointing: True # 是否使用checkpointing
     enable_progress_bar: True # 是否启用tqdm进度条
     benchmark: False # 是否启用benchmark
     deterministic: False # 是否启用deterministic
